--- a/diapos/MaquinasAparamenta.tex
+++ b/diapos/MaquinasAparamenta.tex
@@ -1,4 +1,4 @@
-% Created 2018-10-19 vie 11:45
+% Created 2018-10-19 vie 11:53
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -51,10 +51,10 @@
 \maketitle
 
 \section{Fundamentos de Electromagnetismo}
-\label{sec:orga222c96}
+\label{sec:orgbc19b3c}
 
 
-\begin{frame}[label={sec:org76563ac}]{Fuerza de Lorentz}
+\begin{frame}[label={sec:org901177d}]{Fuerza de Lorentz}
 \begin{itemize}
 \item Un campo magnético ejerce una fuerza sobre una carga en movimiento.
 \end{itemize}
@@ -64,7 +64,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org85b92ee}]{Ley de Oersted y Biot-Savart}
+\begin{frame}[label={sec:orgfb743b8}]{Ley de Oersted y Biot-Savart}
 \begin{itemize}
 \item Una corriente eléctrica crea un campo magnético en torno al
 conductor.
@@ -75,7 +75,7 @@ conductor.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org7a0d5ae}]{Fuerza de Ampere}
+\begin{frame}[label={sec:org4cc61ff}]{Fuerza de Ampere}
 \begin{itemize}
 \item Un conductor por el que circula corriente, situado en el seno de un
 campo magnético, altera este campo magnético, y experimenta una
@@ -91,7 +91,7 @@ Vídeo: \href{http://www.youtube.com/watch?v=2j8D\_N1v0tU}{Repulsión entre barr
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgd0a1044}]{Flujo Magnético}
+\begin{frame}[label={sec:orgb3be910}]{Flujo Magnético}
 El flujo magnético es la cantidad de líneas de fuerza magnética que atraviesan una superficie. Depende de la densidad de campo, \(B\), el área de la superficie, \(A\), y la posición relativa entre ambos, \(\theta\).
 
 \[
@@ -103,7 +103,7 @@ El flujo magnético es la cantidad de líneas de fuerza magnética que atraviesa
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1ce76c4}]{Ley de Faraday}
+\begin{frame}[label={sec:orgc9a4662}]{Ley de Faraday}
 \begin{itemize}
 \item Cuando el \alert{flujo magnético} que atraviesa una espira es \alert{variable}
 aparece \alert{tensión inducida}.
@@ -130,7 +130,7 @@ variación.
 \end{frame}
 
 
-\begin{frame}[label={sec:org859a188}]{Inductor e Inducido}
+\begin{frame}[label={sec:org5366ea5}]{Inductor e Inducido}
 \begin{itemize}
 \item Al elemento que emite el campo magnético se le denomina \alert{inductor} y
 aquel que es atravesado por este flujo es el \alert{inducido}.
@@ -140,22 +140,11 @@ aquel que es atravesado por este flujo es el \alert{inducido}.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org17d5555}]{Tensión, frecuencia y flujo}
-\(\begin{aligned}
-  E & = & 4.44\cdot N\cdot\phi\cdot f\end{aligned}\)
+\begin{frame}[label={sec:org6958dfd}]{Par, potencia y velocidad}
+\[
+  P =  T \cdot \omega
+\]
 
-\begin{itemize}
-\item \(E\) es la tensión inducida; \(N\) número de espiras; \(\phi\) es el flujo
-interceptado; \(f\) frecuencia eléctrica
-
-\item El flujo depende proporcionalmente de la tensión e inversamente de la
-frecuencia.
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label={sec:orga1a6bb8}]{Par, potencia y velocidad}
-\(\begin{aligned}
-  P & = & T\cdot\omega\end{aligned}\)
 
 \begin{itemize}
 \item \(P\) es potencia mecánica; \(T\) par mecánico; \(\omega\) es la velocidad
@@ -167,14 +156,14 @@ estator y rotor. Una vez que están alineados, el par es nulo.
 \end{frame}
 
 \section{Máquinas Eléctricas}
-\label{sec:org4627922}
+\label{sec:orgcb4d82e}
 
 
 \subsection{Tipos de máquinas}
-\label{sec:orgbe18661}
+\label{sec:orgf2fd9b6}
 
 
-\begin{frame}[label={sec:orgf72d255}]{Relación de Frecuencias}
+\begin{frame}[label={sec:org253be6d}]{Relación de Frecuencias}
 \begin{block}{Frecuencia eléctrica y velocidad}
 \(\begin{aligned}
   f_{2} & = & f_{1}-n\cdot p\end{aligned}\)
@@ -189,7 +178,7 @@ frecuencia en el circuito exterior (\(f_{L}\)) es diferente a \(f_{2}\).
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgf8e8344}]{Clasificación de máquinas}
+\begin{frame}[label={sec:org314e054}]{Clasificación de máquinas}
 \begin{itemize}
 \item Estáticas (\(n=0\Rightarrow f_{2}=f_{1}\)): Transformadores
 
@@ -217,7 +206,7 @@ frecuencia en el circuito exterior (\(f_{L}\)) es diferente a \(f_{2}\).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6d56947}]{Transformador}
+\begin{frame}[label={sec:orga835cca}]{Transformador}
 \begin{itemize}
 \item Un transformador consiste en dos bobinas acopladas magnéticamente.
 
@@ -233,7 +222,7 @@ y corriente de entrada (primario) y salida (secundario):
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org8672d7b}]{Transformador}
+\begin{frame}[label={sec:orgab5b86b}]{Transformador}
 \begin{itemize}
 \item Un transformador ideal con relación de transformación \(N_{p}/N_{s}<1\)
 (más vueltas en el secundario que en el primario), sube tensión
@@ -245,7 +234,7 @@ y corriente de entrada (primario) y salida (secundario):
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0e8fa20}]{Motores}
+\begin{frame}[label={sec:orgaae0a0d}]{Motores}
 \begin{block}{Motor DC}
 \begin{itemize}
 \item \(f_{1}=0\); \(f_{L}=0\);
@@ -260,7 +249,7 @@ en alterna.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orga3599b2}]{Motores}
+\begin{frame}[label={sec:orgcd18107}]{Motores}
 \begin{block}{Motor asíncrono o de inducción}
 \begin{itemize}
 \item \(f_{1}\neq0\);
@@ -283,7 +272,7 @@ Vídeos: Motor de inducción artesanal \href{http://www.youtube.com/watch?v=ZRGl
 \end{center}
 \end{block}
 \end{frame}
-\begin{frame}[label={sec:org005c6f3}]{Generadores}
+\begin{frame}[label={sec:org31ec911}]{Generadores}
 \begin{block}{Generador Síncrono o Alternador}
 \begin{itemize}
 \item \(f_{1}=0\);
@@ -301,7 +290,7 @@ estator.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org58a5c45}]{Generadores}
+\begin{frame}[label={sec:org13fcbb6}]{Generadores}
 \begin{block}{Dinamo}
 \begin{itemize}
 \item \(f_{1}=0\); \(f_{L}=0\);
@@ -321,12 +310,40 @@ en el inducido con \(f_{2}\).
 \end{frame}
 
 \section{Aparamenta eléctrica}
-\label{sec:orgdfdc62a}
+\label{sec:orgb5da13c}
+
+\subsection{Sistema de Suministro Eléctrico}
+\label{sec:orgbbf1274}
+\begin{frame}[label={sec:org7d97b31}]{Sistema de suministro eléctrico}
+Un \alert{sistema de suministro eléctrico} tiene como objetivo \alert{producir,
+transportar y distribuir energía eléctrica} a los lugares de consumo,
+con el mínimo coste posible en condiciones de \alert{fiabilidad, calidad y
+seguridad}.
+\end{frame}
+
+\begin{frame}[label={sec:org3e4531d}]{Componentes del Sistema de Suministro Eléctrico}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/Redelectrica2.png}
+\end{center}
+
+\begin{itemize}
+\item Generadores
+
+\item Redes de transporte
+
+\item Redes de distribución
+
+\item Equipos de acondicionamiento, transformación y protección (y en
+algunos casos, almacenamiento)
+
+\item Puntos de consumo
+\end{itemize}
+\end{frame}
 
 
 \subsection{Definición y Funciones}
-\label{sec:org5506415}
-\begin{frame}[label={sec:orgb279e3e}]{Definición}
+\label{sec:orgac17731}
+\begin{frame}[label={sec:org0a083bc}]{Definición}
 \begin{block}{ITC-BT-01}
 \begin{description}
 \item[{Aparamenta:}] Equipo, aparato o material previsto para ser conectado a un circuito eléctrico con el fin de asegurar una o varias de las siguientes funciones: \alert{protección}, \alert{control}, \alert{seccionamiento}, \alert{conexión}.
@@ -338,7 +355,7 @@ instalación.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgd7f6f5c}]{Funciones de la aparamenta}
+\begin{frame}[label={sec:org20ef8bd}]{Funciones de la aparamenta}
 \begin{itemize}
 \item \alert{Protección}:
 
@@ -354,7 +371,7 @@ aislamiento.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org113a961}]{Funciones de la aparamenta}
+\begin{frame}[label={sec:org4c389f2}]{Funciones de la aparamenta}
 \begin{itemize}
 \item \alert{Aislamiento}: separar de forma verificable un circuito, un aparato o
 un elemento de la planta del resto de un sistema que se encuentra en
@@ -363,7 +380,7 @@ seguridad trabajos en la parte aislada.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org24d53a0}]{Funciones de la aparamenta}
+\begin{frame}[label={sec:org83b6fb8}]{Funciones de la aparamenta}
 \begin{itemize}
 \item \alert{Control:} modificar un sistema cargado en cualquier momento
 
@@ -377,7 +394,7 @@ seguridad trabajos en la parte aislada.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org066750a}]{Arco Eléctrico}
+\begin{frame}[label={sec:orga83fc72}]{Arco Eléctrico}
 \begin{itemize}
 \item Descarga eléctrica que se forma entre dos electrodos sometidos a una diferencia de potencial.
 \item Durante el tiempo de la descarga se produce una luminosidad muy intensa y un gran desprendimiento de calor.
@@ -389,7 +406,7 @@ Vídeo: \href{http://www.youtube.com/watch?v=WBTvGqRA4\_0}{Apertura en Alta Tens
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org99b9c7f}]{Poder de corte y cierre}
+\begin{frame}[label={sec:org54319ee}]{Poder de corte y cierre}
 \begin{description}
 \item[{Poder de corte:}] intensidad de corriente que este dispositivo es
 capaz de cortar, bajo una tensión de restablecimiento determinada.
@@ -400,8 +417,8 @@ de establecer, bajo una tensión dada.
 \end{frame}
 
 \subsection{Tipos de Dispositivos}
-\label{sec:org9f8f7c7}
-\begin{frame}[label={sec:org7cfbea0}]{Dispositivos simples}
+\label{sec:org7eac2ea}
+\begin{frame}[label={sec:org28e1a78}]{Dispositivos simples}
 \begin{block}{Seccionador}
 \begin{itemize}
 \item Dispositivo de dos posiciones (abierto/cerrado) enclavable y accionado manualmente que proporciona un aislamiento seguro de un circuito cuando está enclavado en la posición abierta.
@@ -418,7 +435,7 @@ de establecer, bajo una tensión dada.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org86a639b}]{Dispositivos simples}
+\begin{frame}[label={sec:orgccedab7}]{Dispositivos simples}
 \begin{block}{Contactor}
 \begin{itemize}
 \item Dispositivo accionado por solenoide que por lo general se mantiene cerrado mediante una corriente (reducida).
@@ -438,7 +455,7 @@ de establecer, bajo una tensión dada.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org6ba2c17}]{Interruptor magnetotérmico}
+\begin{frame}[label={sec:orgdda3d02}]{Interruptor magnetotérmico}
 \begin{itemize}
 \item Dispositivo automático capaz de interrumpir la corriente eléctrica de un circuito cuando ésta sobrepasa ciertos valores máximos.
 
@@ -454,13 +471,13 @@ Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org0c5483c}]{Interruptor Magnetotérmico}
+\begin{frame}[label={sec:orgab89f1d}]{Interruptor Magnetotérmico}
 \begin{center}
 \includegraphics[height=0.8\textheight]{../figs/SeccionMagnetotermico.png}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org7209136}]{Interruptor diferencial}
+\begin{frame}[label={sec:org0750865}]{Interruptor diferencial}
 \begin{itemize}
 \item Dispositivo automático capaz de interrumpir la corriente eléctrica de un circuito cuando existe una corriente diferencial residual, indicativa de un defecto de aislamiento.
 \item Para la detección emplea un transformador toroidal que abraza a todos los conductores.
@@ -469,7 +486,7 @@ Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0581c7f}]{Interruptor Diferencial}
+\begin{frame}[label={sec:orgc43f49a}]{Interruptor Diferencial}
 \begin{center}
 \includegraphics[height=0.3\textheight]{../figs/InterruptorDiferencial.pdf}
 \end{center}
@@ -480,7 +497,7 @@ Vídeo: \href{http://www.youtube.com/watch?v=c6QqnLgWbCQ}{Apertura de un PIA}
 \end{frame}
 
 \section{Recursos}
-\label{sec:orgb7730a8}
+\label{sec:org5bd192d}
 
 \begin{itemize}
 \item \alert{Fraile Mora, J.}: \emph{Máquinas Eléctricas}. Ed. Mc. Graw Hill.
