--- a/scripts/tikz/inductivo.tex
+++ b/scripts/tikz/inductivo.tex
@@ -8,10 +8,12 @@
 
 \begin{tikzpicture}[domain = 0:9, samples = 1000]
   % \draw[very thin,color=gray] (-0.1,-1.1) grid (10,1.1);
-  \draw[->] (-0.2,0) -- (12.1,0) node[right] {$t$};
+  \draw[->] (-0.2,0) -- (10.1,0) node[right] {$t$};
   \draw[->] (0,-1.2) -- (0,1.1);% node[above] {$f(t)$};
-  \draw[very thick, color=blue] plot[id=sin+] function{sin(x + pi/3)}
-    node[right] {$Y_o  \sin(\omega t + \theta)$};
+  \draw[thick, color=black] plot[id=tension] function{1.3*sin(x)}
+  node[right] {$u(t)$};
+  \draw[thick, color=red] plot[id=corriente] function{sin(x - pi/3)}
+    node[right] {$i(t)$};
 \end{tikzpicture}
 
 \end{document}
